[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/Oswald-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Basic/SignalTypes/Ks/KS-Sig.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Resources/Basic/SignalTypes/Ks/ScriptingKs.gd" type="Script" id=3]
[ext_resource path="res://Resources/Basic/Textures/Black.png" type="Texture" id=4]
[ext_resource path="res://Resources/Basic/Textures/KS-Signal.png" type="Texture" id=5]
[ext_resource path="res://Resources/Basic/SignalTypes/HpTafel.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Resources/Basic/SignalTypes/KsTafel.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Resources/Basic/SignalTypes/VoTafel.obj" type="ArrayMesh" id=8]

[sub_resource type="SpatialMaterial" id=1]
params_cull_mode = 2
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=3]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.992157, 0.0941176, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=5]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="DynamicFont" id=10]
size = 500
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=11]

[sub_resource type="SpatialMaterial" id=12]
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 11 )

[sub_resource type="QuadMesh" id=13]
size = Vector2( 0.5, 0.6 )

[sub_resource type="ViewportTexture" id=14]

[sub_resource type="SpatialMaterial" id=15]
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 14 )

[node name="VisualInstance" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.67658 )
material_override = SubResource( 1 )
mesh = ExtResource( 2 )
material/0 = null

[node name="HpTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.677 )
visible = false
mesh = ExtResource( 6 )
material/0 = null

[node name="KsTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.677 )
visible = false
mesh = ExtResource( 7 )
material/0 = null

[node name="VoTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.677 )
visible = false
mesh = ExtResource( 8 )
material/0 = null

[node name="Red" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0203973, 4.27763, 1.71823 )
material_override = SubResource( 2 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="Orange" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00402704, 4.10741, 1.82482 )
visible = false
material_override = SubResource( 6 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Orange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null

[node name="Green" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00639483, 4.10783, 1.60503 )
visible = false
material_override = SubResource( 8 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 5 )
material/0 = null

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 600 )
render_target_clear_mode = 2

[node name="Node2D" type="Node2D" parent="Viewport"]
z_as_relative = false

[node name="Sprite" type="Sprite" parent="Viewport/Node2D"]
position = Vector2( 327.093, 387.386 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Viewport/Node2D"]
modulate = Color( 1, 0.470588, 0, 1 )
margin_top = -124.614
margin_right = 498.0
margin_bottom = 617.386
custom_fonts/font = SubResource( 10 )
text = "50"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 500, 600 )
render_target_clear_mode = 2

[node name="Node2D" type="Node2D" parent="Viewport2"]
z_as_relative = false

[node name="Sprite" type="Sprite" parent="Viewport2/Node2D"]
position = Vector2( 327.093, 387.386 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Viewport2/Node2D"]
margin_top = -124.614
margin_right = 498.0
margin_bottom = 617.386
custom_fonts/font = SubResource( 10 )
text = "50"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen1" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.448292, 3.36503, 1.71943 )
visible = false
material_override = SubResource( 12 )
mesh = SubResource( 13 )
material/0 = null

[node name="Screen2" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.0808081, 4.76666, 1.71943 )
visible = false
material_override = SubResource( 15 )
mesh = SubResource( 13 )
material/0 = null
